# MathParser.org-mXparser

./: .codeclimate.yml  .gitattributes  .gitignore  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  Unicode Math.xlsx  cloc.txt
CURRENT/cpp/lib/: CMakeLists.txt  MathParserOrgMxParserConfig.cmake.in
CURRENT/cpp/lib/org/mariuszgromada/math/: mxparser.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/: Argument.cpp  Argument.hpp  ArgumentExtension.hpp  CalcStepRecord.cpp  CalcStepRecord.hpp  CalcStepsRegister.cpp  CalcStepsRegister.hpp  CloneCache.cpp  CloneCache.hpp  Constant.cpp  Constant.hpp  Expression.hpp  ExpressionA.cpp  ExpressionB.cpp  ExpressionUtils.cpp  ExpressionUtils.hpp  Function.cpp  Function.hpp  FunctionExtension.hpp  FunctionExtensionVariadic.hpp  License.cpp  License.hpp  Miscellaneous.cpp  Miscellaneous.hpp  PrimitiveElement.cpp  PrimitiveElement.hpp  RecursiveArgument.cpp  RecursiveArgument.hpp  SerializationUtils.cpp  SerializationUtils.hpp  StringInvariant.cpp  StringInvariant.hpp  StringModel.cpp  StringModel.hpp  StringResources.cpp  StringResources.hpp  StringResourcesChinese.cpp  StringResourcesChinese.hpp  StringResourcesFrench.cpp  StringResourcesFrench.hpp  (+16 more)
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/aliases/: AliasesFunctionsStd.hpp  AliasesTypesStd.hpp  AliasesTypesUser.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/macro/: MacroBuild.hpp  MacroCast.hpp  MacroFriends.hpp  MacroMemory.hpp  MacroSerialization.hpp  MacroStaticVarsInit.hpp  MacroString.hpp  MacroVarArgs.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/mathcollection/: AstronomicalConstants.hpp  BinaryRelations.cpp  BinaryRelations.hpp  BooleanAlgebra.cpp  BooleanAlgebra.hpp  Calculus.cpp  Calculus.hpp  Coefficients.cpp  Coefficients.hpp  Evaluate.cpp  Evaluate.hpp  IRandom.hpp  MathConstants.cpp  MathConstants.hpp  MathFunctions.cpp  MathFunctions.hpp  NumberTheory.cpp  NumberTheory.hpp  PhysicalConstants.hpp  PrimesCache.cpp  PrimesCache.hpp  ProbabilityDistributions.cpp  ProbabilityDistributions.hpp  SpecialFunctions.cpp  SpecialFunctions.hpp  SpecialValue.cpp  SpecialValue.hpp  SpecialValueTrigonometric.cpp  SpecialValueTrigonometric.hpp  Statistics.cpp  Statistics.hpp  Units.cpp  Units.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/parsertokens/: BinaryRelation.cpp  BinaryRelation.hpp  BitwiseOperator.cpp  BitwiseOperator.hpp  BooleanOperator.cpp  BooleanOperator.hpp  CalculusOperator.cpp  CalculusOperator.hpp  ConstantValue.cpp  ConstantValue.hpp  Function1Arg.cpp  Function1Arg.hpp  Function2Arg.cpp  Function2Arg.hpp  Function3Arg.cpp  Function3Arg.hpp  FunctionVariadic.cpp  FunctionVariadic.hpp  KeyWord.cpp  KeyWord.hpp  Operator.cpp  Operator.hpp  ParserSymbol.cpp  ParserSymbol.hpp  RandomVariable.cpp  RandomVariable.hpp  SyntaxStringBuilder.cpp  SyntaxStringBuilder.hpp  Token.cpp  Token.hpp  Unit.cpp  Unit.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/syntaxchecker/: CharStream.cpp  CharStream.hpp  ErrorHandler.cpp  ErrorHandler.hpp  ErrorMessage.cpp  ErrorMessage.hpp  JavaCC.hpp  JavaCCToken.cpp  JavaCCToken.hpp  ParseException.cpp  ParseException.hpp  SyntaxChecker.cpp  SyntaxChecker.hpp  SyntaxChecker.jj  SyntaxCheckerConstants.hpp  SyntaxCheckerTokenManager.cpp  SyntaxCheckerTokenManager.hpp  TokenManager.hpp  TokenMgrError.cpp  TokenMgrError.hpp
CURRENT/cpp/lib/org/mariuszgromada/math/mxparser/wrapper/: Array.hpp  BigDecimal.cpp  BigDecimal.hpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  List.cpp  List.hpp  Math.hpp  PtrsMap.hpp  PtrsSet.hpp  Random.cpp  Random.hpp  StringBuilder.cpp  StringBuilder.hpp  SystemUtils.cpp  SystemUtils.hpp  VariadicProcessor.cpp  VariadicProcessor.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/: mxparser.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/: Argument.cpp  Argument.hpp  ArgumentExtension.hpp  CalcStepsRegister.hpp  Constant.cpp  Constant.hpp  ExpressionA.cpp  ExpressionB.cpp  ExpressionUtils.cpp  Function.cpp  Function.hpp  FunctionExtension.hpp  License.cpp  License.hpp  Miscellaneous.cpp  Miscellaneous.hpp  PrimitiveElement.cpp  RecursiveArgument.cpp  RecursiveArgument.hpp  SerializationUtils.cpp  StringModel.cpp  StringModel.hpp  StringResources.cpp  StringResources.hpp  StringResourcesFrench.cpp  StringResourcesFrench.hpp  StringResourcesGerman.cpp  StringResourcesPolish.cpp  StringResourcesPolish.hpp  StringResourcesPortuguese.hpp  StringResourcesSpanish.hpp  StringUtils.cpp  StringUtils.hpp  mXparser.cpp  mXparser.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/aliases/: AliasesTypesUser.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/macro/: MacroBuild.hpp  MacroCast.hpp  MacroMemory.hpp  MacroSerialization.hpp  MacroStaticVarsInit.hpp  MacroString.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/mathcollection/: AstronomicalConstants.hpp  BinaryRelations.cpp  BooleanAlgebra.cpp  Calculus.cpp  Coefficients.cpp  Evaluate.cpp  IRandom.hpp  MathConstants.hpp  MathFunctions.cpp  MathFunctions.hpp  NumberTheory.cpp  NumberTheory.hpp  PrimesCache.cpp  ProbabilityDistributions.cpp  ProbabilityDistributions.hpp  SpecialFunctions.cpp  SpecialValue.cpp  SpecialValue.hpp  SpecialValueTrigonometric.cpp  SpecialValueTrigonometric.hpp  Statistics.cpp  Units.cpp  Units.hpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/parsertokens/: BinaryRelation.hpp  BitwiseOperator.cpp  BooleanOperator.hpp  CalculusOperator.hpp  ConstantValue.hpp  Function1Arg.hpp  Function3Arg.cpp  KeyWord.cpp  Operator.cpp  Operator.hpp  ParserSymbol.cpp  RandomVariable.cpp  RandomVariable.hpp  SyntaxStringBuilder.cpp  SyntaxStringBuilder.hpp  Token.cpp
CURRENT/cpp/lib/src/org/mariuszgromada/math/mxparser/syntaxchecker/: CharStream.cpp  CharStream.hpp  ErrorMessage.cpp  ErrorMessage.hpp  JavaCC.hpp  JavaCCToken.cpp  (+9 more)
CURRENT/cpp/tests/: ApiTest.cpp  CMakeLists.txt  ExpressionTest.cpp  Miscellaneous.hpp  PerformanceTest.cpp  SyntaxTest.cpp  TestsRun.cpp  UnicodeTest.cpp
CURRENT/cpp/working-tests/: CMakeLists.txt  WorkingTests.cpp  WorkingTests.hpp
(+1972 files in other folders)
